kustomize/base/adservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: core
  labels:
    app: adservice
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
    - name: grpc
      port: 9555
      targetPort: 9555
